# prompt-lab

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
prompts_lab/: __init__.py  cli.py  config.py  mock_client.py  models.py  scorer.py  template_engine.py  test_runner.py  tokenizer.py
tests/: test_config.py  test_mock_client.py  test_models.py  test_scorer.py  test_template_engine.py  test_test_runner.py  test_tokenizer.py
