[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompts-lab"
version = "0.1.0"
description = "AI Prompt Playground & Evaluator — test, evaluate, and compare AI prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "EdgarOrtegaRamirez"}
]
keywords = ["ai", "prompt", "evaluation", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "instructor>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
prompt-lab = "prompts_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["prompts_lab"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
